Add SpringBootApplication annotation to the ApplicationMain class